- 필요없는 expression 및 import 삭제 - 가독성 향상 줄바꿈 - EOF new line 추가 - GlobalExceptionHandler는 성격상 aop 패키지로 이동 - 중복 string 상수로 선언